Introduce cuke